# -

./: .gitignore  CLAUDE.md  Dockerfile  NATIVE_DEPLOYMENT_SUCCESS.md
config/: camera_config.yaml  serial_config.yaml
docs/plans/: 2026-03-11-tracker-target-can-bridge-design.md  2026-03-11-tracker-target-can-bridge.md  2026-03-12-feedback-absolute-gimbal-command.md  2026-03-12-rm-can-bridge-usb-frame-compat-design.md  2026-03-12-rm-can-bridge-usb-frame-compat.md  2026-03-14-real-autoaim-latency-design.md  2026-03-14-real-autoaim-latency.md
rm_auto_aim/armor_detector/: CMakeLists.txt
rm_auto_aim/armor_detector/include/armor_detector/: detector_node.hpp  detector_runtime_config.hpp  latest_frame_slot.hpp
rm_auto_aim/armor_detector/src/: detector_node.cpp
rm_auto_aim/armor_detector/test/: test_detector_runtime_config.cpp  test_latest_frame_slot.cpp  test_node_startup.cpp
rm_auto_aim/armor_tracker/: CMakeLists.txt  package.xml
rm_auto_aim/armor_tracker/include/armor_tracker/: tracker_node.hpp
rm_auto_aim/armor_tracker/include/tf2/: buffer_core.hpp  buffer_core_interface.hpp  convert.hpp  exceptions.hpp  time.hpp  transform_datatypes.hpp
rm_auto_aim/armor_tracker/src/: tracker_node.cpp
rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
rm_auto_aim/auto_aim_interfaces/include/auto_aim_interfaces/: latency_window.hpp
rm_auto_aim/auto_aim_interfaces/include/auto_aim_interfaces/auto_aim_interfaces/: latency_window.hpp
rm_auto_aim/auto_aim_interfaces/test/: test_latency_window.cpp
rm_can_bridge/: CAN_MAPPING_SUPPLEMENT.md  CMakeLists.txt  package.xml
rm_can_bridge/config/: tracker_target_bridge.yaml
rm_can_bridge/include/rm_can_bridge/: aim_axis_sign.hpp  feedback_absolute_aim.hpp  gimbal_command_frame.hpp  pending_aim_latency.hpp  q10_6_angle.hpp  target_aim_math.hpp  usb_can_frame_parser.hpp
rm_can_bridge/launch/: rm_can_bridge.launch.py
rm_can_bridge/src/: rm_can_bridge_node.cpp
rm_can_bridge/test/: test_aim_axis_sign.cpp  test_feedback_absolute_aim.cpp  test_gimbal_command_frame.cpp  test_pending_aim_latency.cpp  test_q10_6_angle.cpp  test_target_aim_math.cpp  test_usb_can_frame_parser.cpp
rm_vision/docs/plans/: 2026-03-12-autoaim-latency-design.md  2026-03-12-autoaim-latency.md
rm_vision/rm_vision_bringup/: CMakeLists.txt  package.xml
rm_vision/rm_vision_bringup/config/: launch_params.yaml  node_params.yaml
rm_vision/rm_vision_bringup/launch/: camera_only.launch.py  common.py  vision_bringup_can.launch.py
rm_vision/rm_vision_bringup/test/: test_vision_bringup_can_launch.py
scripts/: rm_camera_test.sh  rm_debug.sh  rm_reset.sh  rm_start.sh
